# npp-template

./: .gitignore  CMakeLists.txt
src/: main.cpp
